# SREES_2026_Mulaosmanovic_EstStaComCoo

EstimacijaStanja/: CMakeLists.txt
EstimacijaStanja/presentation/: Implementacija estimacije stanja.pptx  ReadMe.txt
EstimacijaStanja/res/: DevRes.xml  main.xml
EstimacijaStanja/res/tr/BA/: DFDF  main.xml
EstimacijaStanja/res/tr/EN/: main.xml
EstimacijaStanja/res/tr/ba/: sdsd
EstimacijaStanja/src/: Application.h  ChartCanvas.h  ChooseNetworkDialog.h  EstimatorCore.h  Info.plist  MainView.h  MainWindow.h  MeasurementsDialog.h  NetworkDiagramCanvas.h  SystemFile.h  ViewMeasurements.h  main.cpp
